--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="profit_loss_css.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -28,7 +28,7 @@
         <h2 class="nothing"></h2>
 
     </div>
-    <script src="profit_loss_js.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
